# anki

./: .gitignore  README.md  pyproject.toml  run.py
src/anki/: __init__.py
src/anki/models/: menu_prompts.py  models.py
tests/: test_anki.py
